# rayo

./: .gitignore  Cargo.toml  LICENSE  README.es.md  README.md  elev-check.txt
.github/workflows/: ci.yml  release.yml  winget-submit.yml
crates/rayo-cli/: Cargo.toml  build.rs
crates/rayo-cli/src/: main.rs
crates/rayo-core/: Cargo.toml
crates/rayo-core/src/: content.rs  index.rs  lib.rs  ntfs.rs  persist.rs  syntax.rs
crates/rayo-gui/: Cargo.toml  build.rs
crates/rayo-gui/src/: main.rs
crates/rayo-gui/ui/: main.slint
crates/rayo-service/: Cargo.toml  build.rs
crates/rayo-service/src/: main.rs
docs/: code-signing-decision.md  demo-recording-checklist.md  launch-posts.md
installer/: RayoSetup.iss
integrations/powertoys-run/: Community.PowerToys.Run.Plugin.Rayo.csproj  Main.cs  README.md  RayoPipeClient.cs  plugin.json
scripts/: build-inno-setup.ps1  generate-winget-manifest.ps1  install-powertoys-plugin.ps1  release-windows.ps1  submit-winget.ps1  uninstall-powertoys-plugin.ps1
