[workspace]
members = ["crates/rayo-core", "crates/rayo-cli"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
description = "Ultra-fast NTFS file search engine for Windows, inspired by Everything."
repository = "https://github.com/waar19/rayo"

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
globset = "0.4"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_UI_Shell",
] }
