[workspace]
members = ["crates/rayo-core", "crates/rayo-cli", "crates/rayo-service", "crates/rayo-gui"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
description = "Ultra-fast NTFS file search engine for Windows, inspired by Everything."
repository = "https://github.com/waar19/rayo"

[workspace.dependencies]
anyhow = "1.0"
arboard = "3.6"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
grep-regex = "0.1"
grep-searcher = "0.1"
globset = "0.4"
ignore = "0.4"
memchr = "2.7"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = "1.17"
slint-build = "1.17"
thiserror = "2.0"
winreg = "0.56"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Pipes",
    "Win32_System_SystemInformation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
