[package]
name = "rayo-cli"
version = "0.7.0"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
ignore.workspace = true
rayo-core = { path = "../rayo-core" }
winreg.workspace = true

[build-dependencies]
winresource = "0.1"
