[package]
name = "rayo-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
globset.workspace = true
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true
windows.workspace = true
