[package]
name = "rayo-core"
version = "0.4.1"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
globset.workspace = true
ignore.workspace = true
memchr.workspace = true
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true
windows.workspace = true
