[package]
name = "rayo-gui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
arboard.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
windows.workspace = true
rayo-core = { path = "../rayo-core" }
slint.workspace = true

[build-dependencies]
slint-build.workspace = true
winresource = "0.1"