[package]
name = "rayo-service"
version = "0.4.1"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
serde.workspace = true
serde_json.workspace = true
windows.workspace = true
rayo-core = { path = "../rayo-core" }

[build-dependencies]
winresource = "0.1"
